--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homepage for AJC website - Front-End Developer in Australia</title>
+    <meta
+      name="description"
+      content="Explore AJC's portfolio: an Australian front-end developer showcasing web projects in HTML, CSS, and JavaScript. Let's connect and collaborate!"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/style.css" />
@@ -25,35 +26,56 @@
       src="https://kit.fontawesome.com/31443dff22.js"
       crossorigin="anonymous"
     ></script>
-
-    <title>Homepage</title>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </head>
-<nav class="navbar navbar-expand-lg navbar-dark custom-navbar" >
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">AJC</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
-        </li>        
-      </ul>
-    </div>
-  </div>
-</nav>
+
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">AJC</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item" title="homepage">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/about.html" title="about AJC"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/contact.html" title="contact AJC"
+                >Contact</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/pages/portfolio.html"
+                title="AJC portfolio"
+                >Portfolio</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <header>
       <p>👋🏼 Hi, I am</p>
       <h1>AJC</h1>
@@ -61,12 +83,17 @@
       <a href="/pages/contact.html" class="btn btn-branding">Contact Me</a>
       <div class="separator"></div>
     </header>
+
     <main>
       <p class="text-center m-5">Featured Projects</p>
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-12 col-md-6 ">
-            <img src="images/clock.png" class="img-fluid mx-auto d-block d-none d-md-block" alt="" />
+          <div class="col-12 col-md-6">
+            <img
+              src="images/clock.png"
+              class="img-fluid mx-auto d-block d-none d-md-block"
+              alt="clock project preview"
+            />
           </div>
           <div class="col-12 col-md-6">
             <div class="project-description">
@@ -87,6 +114,7 @@
             </div>
           </div>
         </div>
+
         <div class="row mb-5 align-items-center">
           <div class="col-12 col-md-6">
             <div class="project-description">
@@ -108,12 +136,21 @@
             </div>
           </div>
           <div class="col-12 col-md-6">
-            <img src="images/story-starter.png" class="img-fluid mx-auto d-block d-none d-md-block" alt="" />
+            <img
+              src="images/story-starter.png"
+              class="img-fluid mx-auto d-block d-none d-md-block"
+              alt="AI project preview"
+            />
           </div>
         </div>
+
         <div class="row align-items-center">
           <div class="col-12 col-md-6">
-            <img src="images/weather.png" class="img-fluid mx-auto d-block d-none d-md-block" alt="" />
+            <img
+              src="images/weather.png"
+              class="img-fluid mx-auto d-block d-none d-md-block"
+              alt="weather app preview"
+            />
           </div>
           <div class="col-12 col-md-6">
             <div class="project-description">
@@ -137,8 +174,18 @@
         </div>
       </div>
     </main>
+
     <footer class="custom-footer">
-        Coded by AJC and is hosted on <a href="https://responsive-project-portfolio.netlify.app" target="_blank"> Netify </a>and <a href="https://github.com/InvisibleEnigma/responsive-project" target="_blank"> Github</a>.
+      Coded by AJC and is hosted on
+      <a href="https://responsive-project-portfolio.netlify.app" target="_blank"
+        >Netify</a
+      >
+      and
+      <a
+        href="https://github.com/InvisibleEnigma/responsive-project"
+        target="_blank"
+        >GitHub</a
+      >.
     </footer>
   </body>
 </html>
