--- a/pages/about.html
+++ b/pages/about.html
@@ -1,149 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../style/style.css" />
-    <script
-      src="https://kit.fontawesome.com/31443dff22.js"
-      crossorigin="anonymous"
-    ></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About AJC</title>
 
-    <title>About AJC</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">AJC</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/pages/about.html"
-                >About</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/pages/contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/pages/portfolio.html">Portfolio</a>
-            </li>
-          </ul>
-        </div>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="../style/style.css" />
+  
+  <script src="https://kit.fontawesome.com/31443dff22.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">AJC</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item" title="homepage">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/pages/about.html" title="about AJC">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/contact.html" title="contact AJC">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/portfolio.html" title="AJC portfolio">Portfolio</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <header>
-      <div class="header-section">
-        <h1 class="page-title">About AJC</h1>
-        <h2 class="job-title">A front-end developer based in Australia 🇦🇺</h2>
-        <a href="../pages/contact.html" class="btn btn-branding">Contact Me</a>
-      </div>
-      <div class="separator"></div>
-    </header>
-    <main>
-      <div class="main-container">
-        <div class="row justify-content-center align-items-center">
-          <div class="col-12 col-md-6">
-            <img
-              src="../images/cover-photo.png"
-              alt="Profile Cover"
-              class="img-fluid about-image mx-auto d-block d-none d-md-block mb-5"
-            />
-            <h2 class="about-heading mb-3">About Me</h2>
-            <p class="about-paragraph text-muted">
-              I’m a creative and driven coder, building my skills through
-              hands-on projects and app development. My journey into coding
-              began with curiosity and truly flourished when I joined SheCodes,
-              sparking a passion for crafting innovative and meaningful
-              solutions. <br /> From developing dynamic weather apps to finding ways to
-              merge technology with my love for art and animation, I’m always
-              exploring new ideas that simplify and inspire. As I continue to
-              grow, my goal is to seamlessly blend creativity and functionality,
-              creating projects that are both impactful and engaging.
-            </p>
-            <div class="icons-container">
-              <div class="row justify-content-center social-icons">
-                <div class="col-auto">
-                  <a
-                    href="https://www.instagram.com"
-                    target="_blank"
-                    aria-label="Instagram"
-                  >
-                    <i class="fab fa-instagram"></i>
-                  </a>
-                </div>
-                <div class="col-auto">
-                  <a
-                    href="https://www.facebook.com"
-                    target="_blank"
-                    aria-label="Facebook"
-                  >
-                    <i class="fab fa-facebook"></i>
-                  </a>
-                </div>
-                <div class="col-auto">
-                  <a
-                    href="https://www.twitter.com"
-                    target="_blank"
-                    aria-label="Twitter"
-                  >
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </div>
+    </div>
+  </nav>
+
+  <header>
+    <div class="header-section">
+      <h1 class="page-title">About AJC</h1>
+      <h2 class="job-title">A front-end developer based in Australia 🇦🇺</h2>
+      <a href="../pages/contact.html" class="btn btn-branding">Contact Me</a>
+    </div>
+    <div class="separator"></div>
+  </header>
+
+  <main>
+    <div class="main-container">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-12 col-md-6">
+          <img src="../images/cover-photo.png" alt="Profile Cover"
+            class="img-fluid about-image mx-auto d-block d-none d-md-block mb-5" />
+          <h2 class="about-heading mb-3">About Me</h2>
+          <p class="about-paragraph text-muted">
+            I’m a creative and driven coder, building my skills through hands-on projects and app development. My
+            journey into coding began with curiosity and truly flourished when I joined SheCodes, sparking a passion for
+            crafting innovative and meaningful solutions. <br />
+            From developing dynamic weather apps to finding ways to merge technology with my love for art and animation,
+            I’m always exploring new ideas that simplify and inspire. As I continue to grow, my goal is to seamlessly
+            blend creativity and functionality, creating projects that are both impactful and engaging.
+          </p>
+          <div class="icons-container">
+            <div class="row justify-content-center social-icons">
+              <div class="col-auto">
+                <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </div>
+              <div class="col-auto">
+                <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
+                  <i class="fab fa-facebook"></i>
+                </a>
+              </div>
+              <div class="col-auto">
+                <a href="https://www.twitter.com" target="_blank" aria-label="Twitter">
+                  <i class="fab fa-twitter"></i>
+                </a>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </main>
-    <footer class="custom-footer">
-      Coded by AJC and is hosted on
-      <a
-        href="https://responsive-project-portfolio.netlify.app"
-        target="_blank"
-      >
-        Netify </a
-      >and
-      <a
-        href="https://github.com/InvisibleEnigma/responsive-project"
-        target="_blank"
-      >
-        Github</a
-      >.
-    </footer>
-  </body>
+    </div>
+  </main>
+
+  <footer class="custom-footer">
+    Coded by AJC and is hosted on
+    <a href="https://responsive-project-portfolio.netlify.app" target="_blank">Netify</a> and
+    <a href="https://github.com/InvisibleEnigma/responsive-project" target="_blank">Github</a>.
+  </footer>
+</body>
+
 </html>
