--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,91 +3,103 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AJC Portfolio</title>
+    <meta
+      name="description"
+      content="AJC portfolio of work, a front-end developer based in Australia, utilising a range of coding skills to create engaging projects."
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../style/style.css" />
     <script
       src="https://kit.fontawesome.com/31443dff22.js"
       crossorigin="anonymous"
     ></script>
-
-    <title>Portfolio</title>
   </head>
-  <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">AJC</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pages/about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pages/contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="/pages/portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark custom-navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">AJC</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item" title="Homepage">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/about.html" title="About AJC"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/contact.html" title="Contact AJC"
+                >Contact</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/pages/portfolio.html"
+                title="AJC Portfolio"
+                >Portfolio</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <header>
       <h1 class="page-title">Portfolio</h1>
       <h2 class="job-title">🇦🇺 Australian based front-end developer</h2>
       <a href="../pages/contact.html" class="btn btn-branding">Contact Me</a>
       <div class="separator"></div>
     </header>
+
     <main>
       <div class="content-container">
         <div class="content">
           <h3 class="text-center mb-5 text-muted">
-            Take a look at the projects I have working on
+            Take a look at the projects I have been working on
           </h3>
           <div class="row">
             <div class="col-md-6 mb-5">
               <img
                 src="../images/story-starter.png"
                 class="img-fluid portfolio-image"
-                alt=""
+                alt="AI project preview"
               />
               <h2 class="text-center mb-0">Story Starter Generator</h2>
-              <p class="text-center text-muted">built with HTML and CSS</p>
+              <p class="text-center text-muted">Built with HTML and CSS</p>
               <div class="d-flex justify-content-center">
                 <a
                   href="https://story-starters.netlify.app"
@@ -97,15 +109,16 @@
                 >
               </div>
             </div>
+
             <div class="col-md-6 mb-5">
               <img
                 src="../images/single-city-weather.png"
                 class="img-fluid portfolio-image"
-                alt=""
+                alt="Project weather app preview"
               />
-              <h2 class="text-center mb-0">City Weather Forcast</h2>
+              <h2 class="text-center mb-0">City Weather Forecast</h2>
               <p class="text-center text-muted">
-                built with HTML, CSS and Javascript
+                Built with HTML, CSS, and JavaScript
               </p>
               <div class="d-flex justify-content-center">
                 <a
@@ -116,14 +129,15 @@
                 >
               </div>
             </div>
+
             <div class="col-md-6 mb-5">
               <img
                 src="../images/clock.png"
                 class="img-fluid portfolio-image"
-                alt=""
+                alt="Clock project preview"
               />
-              <h2 class="text-center mb-0">Word Clock</h2>
-              <p class="text-center text-muted">built with HTML and CSS</p>
+              <h2 class="text-center mb-0">World Clock</h2>
+              <p class="text-center text-muted">Built with HTML and CSS</p>
               <div class="d-flex justify-content-center">
                 <a
                   href="https://world-horologium.netlify.app/"
@@ -133,14 +147,17 @@
                 >
               </div>
             </div>
+
             <div class="col-md-6">
               <img
                 src="../images/weather.png"
                 class="img-fluid portfolio-image mb-4"
-                alt=""
+                alt="Weather app preview"
               />
-              <h2 class="text-center mb-0">Multi-day Weather Forcast</h2>
-              <p class="text-center text-muted">built with HTML, CSS and Javascript</p>
+              <h2 class="text-center mb-0">Multi-day Weather Forecast</h2>
+              <p class="text-center text-muted">
+                Built with HTML, CSS, and JavaScript
+              </p>
               <div class="d-flex justify-content-center">
                 <a
                   href="https://tenki-forcast.netlify.app"
@@ -154,19 +171,17 @@
         </div>
       </div>
     </main>
+
     <footer class="custom-footer">
       Coded by AJC and is hosted on
-      <a
-        href="https://responsive-project-portfolio.netlify.app"
-        target="_blank"
+      <a href="https://responsive-project-portfolio.netlify.app" target="_blank"
+        >Netlify</a
       >
-        Netify </a
-      >and
+      and
       <a
         href="https://github.com/InvisibleEnigma/responsive-project"
         target="_blank"
-      >
-        Github</a
+        >GitHub</a
       >.
     </footer>
   </body>
